--- a/02-css-base/style.css
+++ b/02-css-base/style.css
@@ -1,6 +1,25 @@
 
-@import url("theme.css");
-@import url("https://necolas.github.io/normalize.css/8.0.1/normalize.css");
+
+/*@import url("https://necolas.github.io/normalize.css/8.0.1/normalize.css");*/
+
 h1 {
     color: cornflowerblue;
+    font-family: "Arial";
+    font-size:16px;
+    font-weight:normal;
+    
 }
+
+body {
+    background-color: palegreen;
+}
+
+p {
+    font-family: Ubuntu, Verdana, Arial;
+    font-size: 32px;
+}
+strong {
+    font-weight: normal;
+    font-weight: monospace;
+}
+
