--- a/02-css-base/style.css
+++ b/02-css-base/style.css
@@ -17,7 +17,17 @@ body {
 p {
     font-family: Ubuntu, Verdana, Arial;
     font-size: 32px;
+    color: black;
 }
+
+#special-paragraph {
+    color: purple;
+}
+
+/*.nomargin {
+    margin: 0;
+}*/
+
 strong {
     font-weight: normal;
     font-weight: monospace;
