--- a/02.1-homework/style.css
+++ b/02.1-homework/style.css
@@ -8,33 +8,28 @@
     text-align: center;
     padding: 10px;
     margin: 5px; 
-         }
+        }
 
+.menunav {
+    display:flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    background-color: whitesmoke;
+            }
 
-ul.menunav {
-    list-style-type: none;
-    margin: 5px;
-    padding: 0;
-    background-color: whitesmoke; opacity: 0.7; height: 40px; 
-    overflow: hidden;
-    text-align: center;
-    }
+.menu {
+            text-align: center;
+    border: 0.5px solid #bbb;
+    
+        }
 
-li.menunav {
-    display:inline-block;
-    padding: 10px;
-    font-size: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    border-right: 0.5px solid #bbb;
-    }
-
-    li:hover{
-        background-color:grey;
+.menu:hover {
+    background-color:grey;
     }
 
 
-    h3 {
-        color: burlywood;
+h3 {
+    color: burlywood;
     }
     
 .column {
@@ -44,11 +39,11 @@ li.menunav {
         margin: 2px;
         text-align: center;
         background-color: whitesmoke;                         
-    }
+        }
 
        p{
            color: black;
-       }
+        }
 
 .footer {
   position: relative;
